test some type or organization for the code

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
    <title></title>
-   <script src="libs/phaser/build/phaser.min.js"></script>
+   <script src="libs/phaser/phaser.min.js"></script>
    <script src="game/player.js"></script>
    <script src="game/game.js"></script>
 </head>
