some update on structure and code

--- a/index.html
+++ b/index.html
@@ -2,11 +2,18 @@
 <html>
 <head>
    <title></title>
-   <script src="libs/phaser/phaser.min.js"></script>
-   <script src="game/player.js"></script>
-   <script src="game/game.js"></script>
+   
 </head>
 <body>
+
+<div id="Debug">
+	
+</div>
+
+<script src="libs/phaser/phaser.min.js"></script>
+   <script src="game/player.js"></script>
+   <script src="game/inputs/keyboard.js"></script>
+   <script src="game/game.js"></script>
 
 </body>
 </html>
