--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 </div>
 
 <script src="libs/phaser/phaser.min.js"></script>
-   <script src="game/player.js"></script>
+   <script src="game/characters/character1.js"></script>
+   <script src="game/core/player.js"></script>
    <script src="game/inputs/keyboard.js"></script>
    <script src="game/game.js"></script>
 
