--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 </div>
 
 <script src="libs/phaser/phaser.min.js"></script>
+   <!-- STATES -->
+   <script src="game/states/preload.js"></script>
+   <script src="game/states/intro.js"></script>
+   <script src="game/states/title.js"></script>
+   <script src="game/states/character_select.js"></script>
    <script src="game/characters/character1.js"></script>
    <script src="game/core/player.js"></script>
    <script src="game/inputs/keyboard.js"></script>
