--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
    <script src="game/states/intro.js"></script>
    <script src="game/states/title.js"></script>
    <script src="game/states/character_select.js"></script>
+   <script src="game/states/stage1.js"></script>
    <script src="game/characters/character1.js"></script>
    <script src="game/core/player.js"></script>
    <script src="game/inputs/keyboard.js"></script>
