Update scenes to Phaser3 but with inputs event bugs

--- a/index.html
+++ b/index.html
@@ -10,16 +10,20 @@
 	
 </div>
 
-<script src="libs/phaser/phaser.min.js"></script>
-   <!-- STATES -->
-   <script src="game/states/preload.js"></script>
-   <script src="game/states/intro.js"></script>
-   <script src="game/states/title.js"></script>
-   <script src="game/states/character_select.js"></script>
-   <script src="game/states/stage1.js"></script>
+   <!-- DEPENDENCIES -->
+   <script src="libs/phaser/phaser.min.js"></script>
+   <!-- CORE -->   
    <script src="game/characters/character1.js"></script>
    <script src="game/core/player.js"></script>
    <script src="game/inputs/keyboard.js"></script>
+   <script src="game/inputs/input_manager.js"></script>
+   <!-- SCENES -->
+   <script src="game/scenes/intro.js"></script>
+   <script src="game/scenes/title.js"></script>
+   <script src="game/scenes/character-select.js"></script>
+   <script src="game/scenes/stage1.js"></script>
+   <script src="game/scenes/boot.js"></script>
+   <!-- GAME -->
    <script src="game/game.js"></script>
 
 </body>
